Dark mode toggle bug for mobile fixed

--- a/src/components/DarkModeToggle/DarkModeToggle.module.css
+++ b/src/components/DarkModeToggle/DarkModeToggle.module.css
@@ -22,3 +22,9 @@
   border-radius: 50%;
   position: absolute;
 }
+
+@media only screen and (max-width: 768px) {
+  .icon {
+    font-size: 10px;
+  }
+}
